--- a/package.json
+++ b/package.json
@@ -3,20 +3,29 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-  "start": "node ./bin/www"
+    "start": "node ./bin/www"
   },
   "engines": {
-  "node": "0.10.x",
-  "npm" : "1.4.x"
+    "node": "0.10.x",
+    "npm": "1.4.x"
+  },
+  "devDependencies": {
+    "sqlite3": "~2.2.7"
   },
   "dependencies": {
-  "express": "~4.9.0",
-  "body-parser": "~1.8.1",
-  "cookie-parser": "~1.3.3",
-  "morgan": "~1.3.0",
-  "serve-favicon": "~2.1.3",
-  "debug": "~2.0.0",
-  "ejs": "~0.8.5",
-  "express-partials": "~0.3.0"
+    "express": "~4.9.0",
+    "body-parser": "~1.8.1",
+    "cookie-parser": "~1.3.3",
+    "morgan": "~1.3.0",
+    "serve-favicon": "~2.1.3",
+    "debug": "~2.0.0",
+    "ejs": "~0.8.5",
+    "express-partials": "~0.3.0",
+    "sequelize": "~2.1.3",
+    "pg": "~4.3.0",
+    "pg-hstore": "^2.3.2",
+    "express-session": "~1.11.2",
+    "sqlite3": "~3.0.8",
+    "method-override": "~2.3.3"
   }
 }
